delete and filter

--- a/index.html
+++ b/index.html
@@ -41,14 +41,7 @@
               id="task-search"
             />
             <label for="task-search"></label>
-            <ul id="task-list">
-              <li class="task-item">
-                Task: 01
-                <a href="#" class="btn delete-item"
-                  ><i class="far fa-calendar-times"></i
-                ></a>
-              </li>
-            </ul>
+            <ul id="task-list"></ul>
             <input type="submit" value="Clear Task" class="btn" />
           </form>
         </div>
