--- a/index.html
+++ b/index.html
@@ -33,12 +33,7 @@
               />
               <label for="task-filter"></label>
             </div>
-            <ul id="task-collection">
-              <li class="task-item">
-                Task name
-                <a class="delete-item" href="#"><i class="fas fa-trash"></i></a>
-              </li>
-            </ul>
+            <ul id="task-collection"></ul>
             <input
               id="task-clear"
               type="submit"
